# MCP-Moodle

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  moodle-ci.yml  publish.yml
.playwright-mcp/: page-2026-07-15T20-30-26-142Z.yml  page-2026-07-15T20-30-38-670Z.yml  page-2026-07-15T20-30-45-899Z.yml  page-2026-07-15T20-31-01-694Z.yml  page-2026-07-15T20-37-24-042Z.yml  page-2026-07-15T20-43-08-598Z.yml  page-2026-07-15T21-03-29-611Z.yml
docs/: index.html
docs/docs/: client.html  examples.html  faq.html  index.html  install-plugin.html  lifecycle.html  requirements.html  security.html  server.html  token.html  tools.html  troubleshooting.html  web-services.html
docs/videos/: README.md
local/mcpbridge/: README.md  version.php
local/mcpbridge/classes/privacy/: provider.php
local/mcpbridge/db/: services.php
local/mcpbridge/lang/en/: local_mcpbridge.php
moodle-mcp/: .env.example  LICENSE  README.md  pyproject.toml  server.py  test_rest.sh
moodle-mcp/moodle_mcp/: __init__.py  server.py
